tests/rosetta/out/Smalltalk/cartesian-product-of-two-or-more-lists-2.out
/tmp/cartesian-product-of-two-or-more-lists-2.st:3: parse error, expected '|' or identifier
/tmp/cartesian-product-of-two-or-more-lists-2.st:4: expected expression
