tests/rosetta/out/Smalltalk/cartesian-product-of-two-or-more-lists-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| listStr s i llStr cartN a c xs res idx _ n count row j k main p |
Object subclass: #BreakSignal instanceVariableNames: '' classVariableNames: '' poolDictionaries: '' category: nil!.
listStr := [:xs | s := '['.
i := 0.
[(i < ((xs size)))] whileTrue: [.
s := (s + ((xs at: i asString))).
((i < ((((xs size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
i := (i + 1).
].
.
s := (s + ']').
s. ].
llStr := [:lst | s := '['.
i := 0.
[(i < ((lst size)))] whileTrue: [.
s := (s + (listStr value: lst at: i)).
((i < ((((lst size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
i := (i + 1).
].
.
s := (s + ']').
s. ].
cartN := [:lists | ((lists = nil)) ifTrue: [
{}.
] .
a := lists.
((((a size)) = 0)) ifTrue: [
{{}}.
] .
c := 1.
a do: [:xs |.
c := (c * ((xs size))).
].
.
((c = 0)) ifTrue: [
{}.
] .
res := {}.
idx := {}.
a do: [:_ |.
idx := idx copyWith: 0.
].
.
n := (a size).
count := 0.
[.
[(count < c)] whileTrue: [.
row := {}.
j := 0.
[(j < n)] whileTrue: [.
row := row copyWith: a at: j at: idx at: j.
j := (j + 1).
].
.
res := res copyWith: row.
k := (n - 1).
[.
[(k >= 0)] whileTrue: [.
idx at: k put: ((idx at: k) + 1).
(((idx at: k) < ((a at: k size)))) ifTrue: [
BreakSignal signal.
] .
idx at: k put: 0.
k := (k - 1).
].
] on: BreakSignal do: [:ex | ].
count := (count + 1).
].
] on: BreakSignal do: [:ex | ].
res. ].
main := [ Transcript show: (llStr value: cartN value: {{1. 2}. {3. 4}}) printString; cr.
Transcript show: (llStr value: cartN value: {{3. 4}. {1. 2}}) printString; cr.
Transcript show: (llStr value: cartN value: {{1. 2}. {}}) printString; cr.
Transcript show: (llStr value: cartN value: {{}. {1. 2}}) printString; cr.
Transcript show: ''; cr.
Transcript show: '['; cr.
cartN value: {{1776. 1789}. {7. 12}. {4. 14. 23}. {0. 1}} do: [:p |.
Transcript show: (((' ') + (listStr value: p))) printString; cr.
].
.
Transcript show: ']'; cr.
Transcript show: (llStr value: cartN value: {{1. 2. 3}. {30}. {500. 100}}) printString; cr.
Transcript show: (llStr value: cartN value: {{1. 2. 3}. {}. {500. 100}}) printString; cr.
Transcript show: ''; cr.
Transcript show: (llStr value: cartN value: nil) printString; cr.
Transcript show: (llStr value: cartN value: {}) printString; cr. ].
main value.
